Fixed the buttons on MOBILE

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
     display: grid;
     grid-template-columns: 1fr ;
     grid-row: 1fr 1fr;
-    
+    background: blue;
   
     /* ++++++++++++++++ DUDE, DUUUUDE, this is what makes alignment fly */
     /* display: flex; */
@@ -163,15 +163,36 @@
 .text-wrapper {
 
   max-width: 800px;
-  margin: 10vh auto;
+  margin: 5vh auto;
+  }
+  .text-wrapper p {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    text-align: justify;
+  }
+  .question {
+    font-weight: bold;
+  }
+  .buttons-options {
+    max-width: 100%;
+    justify-content: center;
   }
 
 
-
+  .autum-wrapper {
+    
+    background: red;
+  }
   .autum-wrapper img{
     width: 100vw;
   }
-
+  .buttons-options {
+    background: green;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+  }
 
 
 
@@ -183,12 +204,12 @@
     color:#fff;
     border:none;
     position:relative;
-    height:60px;
-    font-size:1.6em;
-    padding:0 2em;
+    height:3rem;
+    font-size:1.2em;
     cursor:pointer;
     transition:800ms ease all;
     outline:none;
+    padding: 1rem;
   }
   .button:hover {
     background:#fff;
@@ -447,8 +468,6 @@ h2 {
   .text-wrapper {
     max-width: 800px;
     margin: 10vh auto;
-  }
-  .introduction {
   }
   .buttons-options {
     width: 100%;
